# audioRec

./: CMakeLists.txt  FindALGLIB.cmake  README.md
GUI/: CMakeLists.txt
GUI/Headers/: Application.hpp  AudioProcess.hpp  ChartRecSpecWidget.hpp  ChartRecWidget.hpp  DBInterpreter.hpp  DatabaseChart.hpp  ImageSlide.hpp  LineEditDropReceiver.hpp  Matching.hpp  VoiceFeatures.hpp  audioRecMainWin.hpp
GUI/Resources/: IconFile.qrc  audioRecMain.ui
GUI/Sources/: Application.cpp  AudioProcess.cpp  AudioReader.cpp  ChartRecSpecWidget.cpp  ChartRecWidget.cpp  DBInterpreter.cpp  DatabaseChart.cpp  ImageSlide.cpp  LineEditDropReceiver.cpp  Matching.cpp  VoiceFeatures.cpp  audioRec.cpp  audioRecMainWin.cpp
Headers/AA/: Application.hpp  AudioProcess.hpp  AudioReader.hpp  ComputeProbability.hpp  DBInterpreter.hpp  FeaturesDistance.hpp  FeaturesExtractor.hpp  FeaturesToCorrMat.hpp  Matching.hpp  VoiceFeatures.hpp
Headers/GUI/: AudioReadExtract.hpp  ChartRecSpecWidget.hpp  ChartRecWidget.hpp  DatabaseChart.hpp  LineEditDropReceiver.hpp  ScanDirectory.hpp  Window.hpp  audioRecMainWin.hpp  savewindow.hpp
Headers/UMF/: ChiSquareTest.hpp  ComputeHistogram.hpp  CurveNormalization.hpp  Evaluate1D.hpp  Fitting1D.hpp  SignalProcessing.hpp
QAlgorithm/: CMakeLists.txt  QAlgorithmConfig.cmake.in
QAlgorithm/Headers/: QAlgorithm.hpp  QAlgorithmEnvelope.hpp
QAlgorithm/Sources/: QAlgorithm.cpp  QAlgorithmEnvelope.cpp
Resources/GUI/Resources/: IconFile.qrc  Window.ui  audioRecMain.ui  savewindow.ui
Sources/AA/: Application.cpp  AudioProcess.cpp  AudioReader.cpp  ComputeProbability.cpp  DBInterpreter.cpp  FeaturesDistance.cpp  FeaturesExtractor.cpp  FeaturesToCorrMat.cpp  Matching.cpp  VoiceFeatures.cpp
Sources/GUI/: AudioReadExtract.cpp  CAVA.cpp  ChartRecSpecWidget.cpp  ChartRecWidget.cpp  DatabaseChart.cpp  ImageSlide.cpp  LineEditDropReceiver.cpp  ScanDirectory.cpp  Window.cpp  audioRec.cpp  audioRecMainWin.cpp  savewindow.cpp
Sources/UMF/: ChiSquareTest.cpp  ComputeHistogram.cpp  CurveNormalization.cpp  Evaluate1D.cpp  Fitting1D.cpp  SignalProcessing.cpp  functions.cpp
matLib/: CMakeLists.txt
matLib/Headers/: functions.hpp
matLib/Sources/: functions.cpp
